             two-argument binmode() that 5.005 doesn't support.
             (http://rt.cpan.org/Ticket/Display.html?id=34051)
    *   (ms) Applied patch by Emmanuel Rodriguez (POTYL) doing away with 
             hard-coded line numbers in 024WarnDieCarp.t to make it work
             cpan2rpm for building RPM packages 
             (http://rt.cpan.org/Public/Bug/Display.html?id=35370)

1.15 (2008/02/10)
    *   (ms) appender_thresholds_adjust() with a parameter of 0 now
             does nothing (requested by Oliver Koch).
    *   (kg) Added 'defer_connection' to Socket appender so it's more useful
             under Apache.
    *   (ms) [rt.cpan.org #32738] fixed caller_depth for error_warn()
             (reported by Felix Antonius Wilhelm Ostmann)
    *   (ms) [rt.cpan.org #32942] fixed get_logger() for subclassed Log4perl
             (reported by Felix Antonius Wilhelm Ostmann)

1.14 (2007/11/18)
    *   (ms) Fixed test suite bug which surfaced in Darwin because temporary
             files contain '++' which freaked out the sloppy regex match.
    *   (ms) Better handling of empty config files (reported by Robert Raisch)
    *   (ms) Rewrote the Synchronized appender to use semaphores exclusivly
             (got rid of IPC::Shareable).
    *   (ms) Added Log::Log4perl::Util::Semaphore for easy semop handling
    *   (ms) Fixed t/026FileApp.t to work on MSWin32.

1.13 (2007/10/11)
    *   (ms) Another doc fix by Craig
    *   (ms) Applied Fedora 7 patches
    *   (ms) Added create_at_logtime option to file appender
    *   (ms) Added trace level color (yellow) in ScreenColoredLevels
             appender as suggested by Arvind Jayaprakash in
             https://sourceforge.net/tracker/index.php?
                 func=detail&aid=1791445&group_id=56939&atid=482388

1.12 (2007/06/23)
    *   (ms) Added Log::Log4perl::Resurrector to resurrect commented-out
             Log4perl statements in all subsequently loaded modules (allows