@@ -17,6 +17,8 @@
              hard-coded line numbers in 024WarnDieCarp.t to make it work
              cpan2rpm for building RPM packages 
              (http://rt.cpan.org/Public/Bug/Display.html?id=35370)
+    *   (ms) Fixed recreate_check_interval = 0 bug reported by 
+             Bill Moseley.
 
 1.15 (2008/02/10)
     *   (ms) appender_thresholds_adjust() with a parameter of 0 now
